<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    android:background="@drawable/background_radial">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/main_week"
                android:layout_marginBottom="2dp"
                android:gravity="center_horizontal"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:background="@color/white"
                    android:id="@+id/main_first_week_btn"
                    android:layout_width="60dp"
                    android:text="@string/main_week_I"
                    android:layout_height="30dp"/>
                <Button
                    android:background="@color/white"
                    android:id="@+id/main_second_week_btn"
                    android:text="@string/main_week_II"
                    android:layout_width="60dp"
                    android:layout_height="30dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom|end"
            android:layout_marginRight="30dp">
            <Button
                android:background="@color/white"
                android:id="@+id/main_change_button"
                android:text="@string/main_change_button"
                android:layout_width="80dp"
                android:layout_height="30dp"/>
            <Button
                android:background="@color/white"
                android:id="@+id/main_settings_button"
                android:text="@string/main_settings_button"
                android:layout_marginLeft="5dp"
                android:layout_width="80dp"
                android:layout_height="30dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ExpandableListView
            android:foregroundGravity="center_vertical"
            android:dividerHeight="3dp"
            android:groupIndicator="@null"
            android:layout_margin="30dp"
            android:layout_gravity="center"
            android:id="@+id/weeks_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ExpandableListView>
    </LinearLayout>
</LinearLayout>