<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    android:background="@drawable/background_radial">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Налаштування"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/settings_delete_groups_text"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/settings_delete_groups_button"/>
                <Button
                    android:id="@+id/settings_delete_groups_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settings_delete"
                    android:textSize="12sp"/>
            </LinearLayout>
            <TextView
                android:textColor="@color/white"
                android:gravity="start"
                android:id="@+id/settings_groups_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_groups_text"/>
            <ListView
                android:id="@+id/settings_groups_listview"
                android:layout_gravity="start"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>